fixed cut off border

--- a/introvette/src/app/portfolio/portfolio.component.css
+++ b/introvette/src/app/portfolio/portfolio.component.css
@@ -13,9 +13,11 @@ body {
 
 .carousel {
     margin-left: 200px;
-
 }
 
+.row {
+    height: 415px;
+}
 
 
 .buttons {
